--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6,17 +6,61 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-image: url("../images/background-style.png");
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  height: 2px;
+  width: 4px;
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  background: -webkit-gradient(linear, left top, left bottom, from(#168fec), to(#1b17d7));
+  background: linear-gradient(to bottom, #168fec 0%, #1b17d7 100%);
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: -webkit-gradient(linear, left top, left bottom, from(#168fec), to(#1b17d7));
+  background: linear-gradient(to bottom, #168fec 0%, #1b17d7 100%);
+  border-radius: 0px;
+}
+
 .sidebar-overlay {
   background: #00000042;
-  backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   -webkit-filter: blur(5px);
           filter: blur(5px);
   height: 100%;
   left: -100%;
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 10;
+}
+
+a.cta-button {
+  position: absolute;
+  right: 101px;
+  top: 41px;
+  color: #fff;
+  border: 1px solid #1779e8;
+  padding: 6px 21px;
+  border-radius: 5px;
+  z-index: 9;
+  font-weight: bolder;
+}
+
+a.cta-button:hover {
+  text-decoration: none;
+  background: #0000ff4d;
 }
 
 nav.sidebar {
@@ -27,7 +71,7 @@ nav.sidebar {
   left: -82%;
   margin: 0;
   padding: 20px 20px;
-  position: absolute;
+  position: fixed;
   width: 25%;
   z-index: 2;
   -webkit-transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
@@ -50,7 +94,7 @@ nav.sidebar .sidebar__btn-close {
   padding: 10px;
   right: 13px;
   top: 36px;
-  position: absolute;
+  position: fixed;
   border: none;
   border-radius: 0;
   line-height: 0;
@@ -104,7 +148,8 @@ marquee {
 }
 
 .banner-head {
-  background: #02174e;
+  background: -webkit-gradient(linear, left top, left bottom, from(#02174e), to(#02174e00));
+  background: linear-gradient(#02174e, #02174e00);
   width: 100%;
   height: 100vh;
 }
@@ -160,5 +205,490 @@ marquee {
   .demo .main-title {
     font-size: 3em;
   }
+}
+
+.heading-sub-banner h2 {
+  font-size: 36px;
+  font-weight: 800;
+  line-height: 1.3em;
+  letter-spacing: 1px;
+  color: #168fec;
+}
+
+.heading-sub-banner p {
+  color: #b4b4b4;
+}
+
+.two-type {
+  width: 80%;
+}
+
+.two-type h3 {
+  font-size: 22px;
+  color: #94d0ff;
+}
+
+.two-type-icon img {
+  width: 80px;
+}
+
+.about-content {
+  max-width: 93%;
+  margin: 0 auto;
+}
+
+.about-content p {
+  font-size: 18px;
+}
+
+.section {
+  position: relative;
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  height: 100vh;
+}
+
+.blur-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 8;
+  display: block;
+  background-size: cover;
+  background-position: center;
+  background-image: url("http://www.ivang-design.com/svg-load/video.jpg");
+  -webkit-filter: blur(6px);
+          filter: blur(6px);
+}
+
+.blur-img-over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 10px solid #060606;
+  z-index: 9;
+  display: block;
+}
+
+/* Video
+================================================== */
+.wrap-rel {
+  position: relative;
+  width: 100%;
+  display: block;
+}
+
+.video-container {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  display: block;
+  margin: 0;
+  padding: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 9;
+}
+
+/* #Video wrapper
+================================================== */
+.video-section {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.45);
+          box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.45);
+}
+
+.video-wrapper,
+figure.vimeo,
+figure.youtube {
+  margin: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 0;
+  height: 0;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+figure.youtube a img,
+figure.vimeo a img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100%;
+  max-width: none;
+}
+
+figure.vimeo a:after,
+figure.youtube a:after {
+  content: "";
+  width: 60px;
+  height: 60px;
+  background: #fff;
+  z-index: 9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -30px 0 0 -30px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.15);
+  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+figure.vimeo:hover a:after,
+figure.youtube:hover a:after {
+  -webkit-box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.1);
+}
+
+figure.vimeo:hover a:after,
+figure.youtube:hover a:after {
+  opacity: 0;
+}
+
+figure.vimeo a:before,
+figure.youtube a:before {
+  border-left: 8px solid #212121;
+}
+
+figure.vimeo a:before,
+figure.youtube a:before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -3px;
+  margin-top: -5px;
+  display: block;
+  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+figure.vimeo:hover a:before,
+figure.youtube:hover a:before {
+  border-color: transparent;
+}
+
+figure.vimeo a:hover img,
+figure.youtube a:hover img {
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+figure.vimeo a img,
+figure.youtube a img {
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+  border-radius: 10px;
+  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+}
+
+.counter-style {
+  text-align: center;
+}
+
+.counter-style h3 {
+  font-size: 45px;
+  font-weight: bolder;
+  color: #e0c2c2;
+  -webkit-animation: neon infinite 1.3s;
+          animation: neon infinite 1.3s;
+}
+
+.counter-style p {
+  color: #168fec;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+@-webkit-keyframes neon {
+  0%,
+  100% {
+    text-shadow: 0 0 2px rgba(0, 0, 255, 0.308), 0 0 25px rgba(0, 0, 255, 0.308), 0 0 4px white, 0 0 30px rgba(0, 0, 255, 0.473);
+  }
+  70% {
+    text-shadow: 0 0 0px rgba(0, 0, 255, 0.308), 0 0 20px white;
+  }
+}
+
+@keyframes neon {
+  0%,
+  100% {
+    text-shadow: 0 0 2px rgba(0, 0, 255, 0.308), 0 0 25px rgba(0, 0, 255, 0.308), 0 0 4px white, 0 0 30px rgba(0, 0, 255, 0.473);
+  }
+  70% {
+    text-shadow: 0 0 0px rgba(0, 0, 255, 0.308), 0 0 20px white;
+  }
+}
+
+.modal-backdrop.show {
+  opacity: .5;
+  z-index: 8;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+}
+
+.upper-model {
+  z-index: 11;
+  height: 100vh;
+}
+
+.video-model iframe {
+  height: 98vh;
+}
+
+.modal-dialog.modal-dialog-centered.modal-lg {
+  max-width: 100vw;
+  margin: 0;
+  overflow: hidden;
+}
+
+button.close.close-video {
+  width: 10px;
+  position: fixed;
+  right: 5px;
+  background: #fff;
+  width: 35px;
+  height: 36px;
+  border-radius: 26px;
+  color: #1a1dd8;
+  padding-bottom: 4px;
+  opacity: 1;
+}
+
+.mid-align {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.widget-container {
+  width: 100%;
+  margin: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 4px;
+}
+
+.one-right {
+  right: -32px;
+  position: inherit;
+}
+
+.one-left {
+  left: -32px;
+  position: inherit;
+}
+
+img.attachment-full.size-full {
+  width: 55px;
+}
+
+figure.box-img {
+  float: left;
+  margin-right: 10px;
+}
+
+.image-box-wrapper {
+  padding: 14px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#168fec), to(#1b17d7));
+  background-image: linear-gradient(to right, #168fec 0%, #1b17d7 100%);
+  border-radius: 3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+
+.image-box-description {
+  margin: 0;
+}
+
+.image-box-content .image-box-title {
+  font-weight: bolder;
+  font-size: 17px;
+  color: #fff;
+}
+
+.latest-news iframe {
+  width: 100%;
+  height: 46vh;
+}
+
+.latest-news-disc p {
+  margin-bottom: 0;
+  color: #b4b4b4;
+  text-align: justify;
+}
+
+.old-news-image {
+  float: left;
+  margin-right: 20px;
+  width: 95vw;
+}
+
+.old-news-image iframe {
+  width: 100%;
+}
+
+.old-news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.old-news-disc p {
+  color: #b4b4b4;
+  text-align: justify;
+}
+
+p.view-more {
+  position: absolute;
+  float: right;
+  right: 0;
+  top: 10px;
+}
+
+p.view-more a {
+  text-decoration: none;
+}
+
+.workshop {
+  margin-bottom: 30px;
+}
+
+.workshop iframe {
+  height: 50vh;
+  width: 100%;
+  border: 5px solid #868686;
+}
+
+.block-button {
+  border: none;
+  outline: none;
+  color: #000;
+  padding: 3px;
+  position: relative;
+  display: inline-block;
+  -webkit-transition: color .5s ease;
+  transition: color .5s ease;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.block-button:before {
+  width: 100%;
+  height: 50%;
+  left: -1px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-left: solid 1px #fff;
+  border-right: solid 1px #fff;
+}
+
+.block-button span {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+.block-button:hover {
+  cursor: pointer;
+  background-color: #1874e8;
+  border: none;
+  border-color: #1874e8;
+  color: #fff !important;
+}
+
+.block-button:hover:after {
+  border: 0;
+}
+
+.block-button:hover:before {
+  border: 0;
+}
+
+.block-button:after, .block-button:before {
+  content: '';
+  display: block;
+  position: absolute;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.block-button .rollhover {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  padding: 8px 30px;
+  position: relative;
+  border: solid 1px #fff;
+}
+
+.block-button .rollhover:before {
+  left: 0;
+}
+
+.block-button .rollhover:after {
+  right: 0;
+}
+
+.block-button:after {
+  width: 80%;
+  height: 100%;
+  top: -1px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-top: solid 1px #fff;
+  border-bottom: solid 1px #fff;
+}
+
+.small--header,
+.button-label {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 2px;
+  line-height: 24px;
+}
+
+.block-button .rollhover:before, .block-button .rollhover:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 51%;
+  height: 100%;
+  top: 0;
+  background-color: #fff;
+  z-index: -1;
+  -webkit-transition: width .5s ease;
+  transition: width .5s ease;
 }
 /*# sourceMappingURL=style.css.map */
