--- a/source/scss/pages/_home.scss
+++ b/source/scss/pages/_home.scss
@@ -7,7 +7,8 @@ marquee {
 }
 
 .banner-head {
-    background: $color-navy-blue;
+    // background: $color-navy-blue;
+    background: linear-gradient($color-navy-blue, #02174e00);
     width: 100%;
     height: 100vh;
 }
@@ -60,3 +61,531 @@ marquee {
         font-size: 3em;
     }
 }
+
+.heading-sub-banner {
+    h2 {
+        font-size: 36px;
+        font-weight: 800;
+        line-height: 1.3em;
+        letter-spacing: 1px;
+        color: $color-two-lignt-blue;
+    }
+    p {
+        color: #b4b4b4;
+    }
+}
+
+.two-type {
+    width: 80%;
+    h3 {
+        font-size: 22px;
+        color: #94d0ff;
+    }
+}
+
+.two-type-icon {
+    img {
+        width: 80px;
+    }
+}
+
+.about-content {
+    max-width: 93%;
+    margin: 0 auto;
+    p {
+        font-size: 18px;
+    }
+}
+
+////////////////////////////////////
+/////////////////////////////////// VIDEO section start /////////////////////////////////////
+///////////////////////////////////
+.section {
+    position: relative;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    height: 100vh;
+}
+
+.blur-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 8;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-image: url("http://www.ivang-design.com/svg-load/video.jpg");
+    filter: blur(6px);
+}
+
+.blur-img-over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 10px solid #060606;
+    z-index: 9;
+    display: block;
+}
+
+
+/* Video
+================================================== */
+
+.wrap-rel {
+    position: relative;
+    width: 100%;
+    display: block;
+}
+
+.video-container {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    display: block;
+    margin: 0;
+    padding: 0;
+    transform: translateY(-50%);
+    z-index: 9;
+}
+
+
+/* #Video wrapper
+================================================== */
+
+.video-section {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.45);
+}
+
+.video-wrapper,
+figure.vimeo,
+figure.youtube {
+    margin: 0;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 0;
+    height: 0;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+figure.youtube a img,
+figure.vimeo a img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    max-width: none;
+}
+
+figure.vimeo a:after,
+figure.youtube a:after {
+    content: "";
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    z-index: 9;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -30px 0 0 -30px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.15);
+    cursor: url('http://www.ivang-design.com/svg-load/play.png') 30 30, pointer;
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
+
+figure.vimeo:hover a:after,
+figure.youtube:hover a:after {
+    box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.1);
+}
+
+figure.vimeo:hover a:after,
+figure.youtube:hover a:after {
+    opacity: 0;
+}
+
+figure.vimeo a:before,
+figure.youtube a:before {
+    border-left: 8px solid #212121;
+}
+
+figure.vimeo a:before,
+figure.youtube a:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -3px;
+    margin-top: -5px;
+    display: block;
+    cursor: url('http://www.ivang-design.com/svg-load/play.png') 30 30, pointer;
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
+
+figure.vimeo:hover a:before,
+figure.youtube:hover a:before {
+    border-color: transparent;
+}
+
+figure.vimeo a:hover img,
+figure.youtube a:hover img {
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+figure.vimeo a img,
+figure.youtube a img {
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear;
+    border-radius: 10px;
+    cursor: url('http://www.ivang-design.com/svg-load/play.png') 30 30, pointer;
+}
+
+////////////////////////////////////
+/////////////////////////////////// VIDEO section END /////////////////////////////////////
+///////////////////////////////////
+// .box {
+//     position: relative;
+//     width: 200px;
+//     height: 200px;
+//     border-radius: 50%;
+//     background: linear-gradient(45deg, transparent, transparent 40%, yellow), linear-gradient(#262626, #141414);
+//     animation: rotate 1.5s linear infinite;
+//     &:before,
+//     &:after {
+//         content: " ";
+//         position: absolute;
+//         top: 8px;
+//         left: 8px;
+//         right: 8px;
+//         bottom: 8px;
+//         background: linear-gradient(#161616, #262626);
+//         border-radius: inherit;
+//     }
+//     &:before {
+//         background: linear-gradient(45deg, transparent, transparent 40%, yellow);
+//         filter: blur(32px);
+//     }
+// }
+// @keyframes rotate {
+//     100% {
+//         transform: rotate(360deg);
+//         filter: hue-rotate(360deg);
+//     }
+// }
+.counter-style {
+    text-align: center;
+    h3 {
+        font-size: 45px;
+        font-weight: bolder;
+        color: #e0c2c2;
+        animation: neon infinite 1.3s;
+    }
+    p {
+        color: #168fec;
+        font-weight: 500;
+        font-size: 18px;
+    }
+}
+
+@keyframes neon {
+    0%,
+    100% {
+        text-shadow: 0 0 2px rgba(0, 0, 255, 0.308), 0 0 25px rgba(0, 0, 255, 0.308), 0 0 4px white, 0 0 30px rgba(0, 0, 255, 0.473);
+    }
+    70% {
+        text-shadow: 0 0 0px rgba(0, 0, 255, 0.308), 0 0 20px white;
+    }
+}
+
+.modal-backdrop.show {
+    opacity: .5;
+    z-index: 8;
+    backdrop-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.upper-model {
+    z-index: 11;
+    height: 100vh;
+}
+
+.video-model {
+    iframe {
+        height: 98vh;
+    }
+}
+
+.modal-dialog.modal-dialog-centered.modal-lg {
+    max-width: 100vw;
+    margin: 0;
+    overflow: hidden;
+}
+
+button.close.close-video {
+    width: 10px;
+    position: fixed;
+    right: 5px;
+    background: #fff;
+    width: 35px;
+    height: 36px;
+    border-radius: 26px;
+    color: #1a1dd8;
+    padding-bottom: 4px;
+    opacity: 1;
+}
+
+/////////////////////////////////////////////////////////
+////////////////// Why choose ICSS CSS START //////////////////
+/////////////////////////////////////////////////////////
+.mid-align {
+    width: 85%;
+    margin: 0 auto;
+}
+
+.widget-container {
+    width: 100%;
+    margin: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 4px;
+}
+
+.one-right {
+    right: -32px;
+    position: inherit;
+}
+
+.one-left {
+    left: -32px;
+    position: inherit;
+}
+
+img.attachment-full.size-full {
+    width: 55px;
+}
+
+figure.box-img {
+    float: left;
+    margin-right: 10px;
+}
+
+.image-box-wrapper {
+    padding: 14px;
+    background-image: linear-gradient(to right, #168fec 0%, #1b17d7 100%);
+    border-radius: 3px;
+    display: flex;
+    color: #fff;
+}
+
+.image-box-description {
+    margin: 0;
+}
+
+.image-box-content {
+    .image-box-title {
+        font-weight: bolder;
+        font-size: 17px;
+        color: #fff;
+    }
+}
+
+/////////////////////////////////////////////////////////
+////////////////// Why choose ICSS CSS END //////////////////
+/////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////
+////////////////// MEDIA COVERAGES CSS start //////////////////
+/////////////////////////////////////////////////////////
+.latest-news {
+    iframe {
+        width: 100%;
+        height: 46vh;
+    }
+}
+
+.latest-news-disc {
+    p {
+        margin-bottom: 0;
+        color: #b4b4b4;
+        text-align: justify;
+    }
+}
+
+.old-news-image {
+    float: left;
+    margin-right: 20px;
+    width: 95vw;
+    iframe {
+        width: 100%;
+    }
+}
+
+.old-news {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.old-news-disc {
+    p {
+        color: #b4b4b4;
+        text-align: justify;
+    }
+}
+
+p.view-more {
+    position: absolute;
+    float: right;
+    right: 0;
+    top: 10px;
+    a {
+        text-decoration: none;
+    }
+}
+
+/////////////////////////////////////////////////////////
+////////////////// MEDIA COVERAGES CSS end //////////////////
+/////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////
+////////////////// Workshops & Training Sessions Conducted by ICSS CSS START //////////////////
+/////////////////////////////////////////////////////////
+.workshop {
+    margin-bottom: 30px;
+    iframe {
+        height: 50vh;
+        width: 100%;
+        border: 5px solid #868686;
+    }
+}
+
+.block-button {
+    border: none;
+    outline: none;
+    color: #000;
+    padding: 3px;
+    position: relative;
+    display: inline-block;
+    -webkit-transition: color .5s ease;
+    transition: color .5s ease;
+    border: none;
+    outline: none;
+    background: none;
+    &:before {
+        width: 100%;
+        height: 50%;
+        left: -1px;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+        border-left: solid 1px #fff;
+        border-right: solid 1px #fff;
+    }
+    span {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+    }
+    &:hover {
+        cursor: pointer;
+        background-color: #1874e8;
+        border: none;
+        border-color: #1874e8;
+        color: #fff !important;
+        &:after {
+            border: 0;
+        }
+        &:before {
+            border: 0;
+        }
+    }
+    &:after,
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        -webkit-transition: all .5s ease;
+        transition: all .5s ease;
+    }
+    .rollhover {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        padding: 8px 30px;
+        position: relative;
+        border: solid 1px #fff;
+        &:before {
+            left: 0;
+        }
+        &:after {
+            right: 0;
+        }
+    }
+    &:after {
+        width: 80%;
+        height: 100%;
+        top: -1px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        border-top: solid 1px #fff;
+        border-bottom: solid 1px #fff;
+    }
+}
+
+.small--header,
+.button-label {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: 2px;
+    line-height: 24px;
+}
+
+.block-button {
+    .rollhover {
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 51%;
+            height: 100%;
+            top: 0;
+            background-color: #fff;
+            z-index: -1;
+            -webkit-transition: width .5s ease;
+            transition: width .5s ease;
+        }
+    }
+}
+
+/////////////////////////////////////////////////////////
+////////////////// Workshops & Training Sessions Conducted by ICSS CSS END //////////////////
+/////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////
+////////////////// BLOG CSS START //////////////////
+/////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////
+////////////////// BLOG CSS END //////////////////
+/////////////////////////////////////////////////////////
