--- a/source/css/style.css
+++ b/source/css/style.css
@@ -197,6 +197,20 @@ marquee {
           transform: translate3d(7%, -50%, 0);
 }
 
+div#particles-js {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+canvas.particles-js-canvas-el {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .main-title .thin {
   font-weight: 200;
 }
@@ -690,5 +704,80 @@ p.view-more a {
   z-index: -1;
   -webkit-transition: width .5s ease;
   transition: width .5s ease;
+}
+
+.single-home-blog .card {
+  border: 0px solid transparent;
+  border-radius: 0px;
+  background-color: transparent;
+  position: relative;
+}
+
+.single-home-blog .card .card-body {
+  padding: 25px 10px 29px 18px;
+  background-color: #fff;
+  position: absolute;
+  left: 20px;
+  bottom: -50px;
+  -webkit-box-shadow: -7.552px 9.326px 20px 0px #040404;
+          box-shadow: -7.552px 9.326px 20px 0px #040404;
+  border-radius: 10px;
+}
+
+.single-home-blog .card .card-body a {
+  text-decoration: none;
+}
+
+.single-home-blog .card img {
+  border-radius: 5px;
+}
+
+.single-home-blog .card-img-top {
+  border-radius: 0px;
+}
+
+.main-fetured-item {
+  position: relative;
+  background: url("../images/blur_image.png") no-repeat center center/cover;
+  padding: 80px 30px 80px;
+  z-index: 1;
+  border-radius: 11px;
+  -moz-border-radius: 11px;
+  -webkit-border-radius: 11px;
+  border: 1px solid #251c78;
+  overflow: hidden;
+}
+
+.main-fetured-item.main-fetured-item:before {
+  background: rgba(25, 12, 109, 0.79);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+}
+
+.glass-heading {
+  text-align: center;
+  color: #fff;
+}
+
+.glass-heading h4 {
+  margin-bottom: 20px;
+}
+
+.certified-logo img {
+  width: 20%;
+  margin-left: 20px;
+}
+
+.certified-logo img:first-child {
+  margin-left: 0px;
+}
+
+.member-logo img {
+  width: 50%;
+  margin-right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
