--- a/source/css/style.css
+++ b/source/css/style.css
@@ -228,6 +228,7 @@ canvas.particles-js-canvas-el {
   line-height: 1.3em;
   letter-spacing: 1px;
   color: #168fec;
+  text-transform: uppercase;
 }
 
 .heading-sub-banner p {
@@ -527,8 +528,9 @@ figure.box-img {
 
 .image-box-wrapper {
   padding: 14px;
-  background-image: -webkit-gradient(linear, left top, right top, from(#168fec), to(#1b17d7));
-  background-image: linear-gradient(to right, #168fec 0%, #1b17d7 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#2980b9), color-stop(#6dd5fa), to(#ffffff));
+  background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-radius: 3px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -780,5 +782,153 @@ p.view-more a {
 .member-logo img {
   width: 50%;
   margin-right: 5px;
+}
+
+.footer-sec {
+  background: url("../images/footer_image.png") no-repeat center center;
+  background-size: cover;
+  padding: 70px;
+  position: relative;
+}
+
+.footer-sec .sub_title a {
+  color: cyan;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer-sec .sub_title a:hover {
+  text-decoration: none;
+}
+
+.footer-sec .sub_title a:hover span {
+  color: #fff;
+}
+
+.footer-sec .sub_title span {
+  position: relative;
+  font-weight: 400;
+  color: #dbe3e3;
+  text-transform: uppercase;
+  font-size: 18px;
+  margin: 0 10px;
+}
+
+.footer-sec .sub_title span:after {
+  position: absolute;
+  content: "";
+  top: 10px;
+  bottom: 0;
+  right: -12px;
+  width: 4px;
+  height: 4px;
+  background: cyan;
+  border-radius: 50%;
+}
+
+.copy-text p {
+  text-align: center;
+  color: #fff;
+  margin: 0;
+}
+
+.banner_social_link {
+  margin: 35px 0;
+}
+
+.banner_social_link li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.banner_social_link a {
+  position: relative;
+  display: block;
+  width: 45px;
+  height: 45px;
+  color: #dbe3e3;
+  font-size: 22px;
+  line-height: 45px;
+  border-radius: 50%;
+  border: 1px solid #1fe482;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 0;
+}
+
+.banner_social_link a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  border-radius: 50%;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: -1;
+}
+
+.banner_social_link a:hover:before {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
+.banner_social_link a:hover {
+  color: #1fe482;
+}
+
+.w-text {
+  color: cyan;
+}
+
+.card-style {
+  display: block;
+  position: relative;
+  height: 220px;
+  width: 221px;
+  background: #fff;
+  padding: 63px 20px 20px 20px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+tag {
+  display: block;
+  padding: 8px 14px;
+  position: absolute;
+  right: -14px;
+  top: 20px;
+  background-color: darkblue;
+  color: dodgerblue;
+  border-top-right-radius: 7px;
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+tag::after {
+  display: block;
+  content: "";
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  background-color: dodgerblue;
+  right: 0;
+  bottom: -14px;
+  border-bottom-right-radius: 14px;
+}
+
+.warp-style {
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
