--- a/source/scss/variables/_colors.scss
+++ b/source/scss/variables/_colors.scss
@@ -1,6 +1,13 @@
 $color-one-dark-blue: #1b17d7;
 $color-two-lignt-blue: #168fec;
 $color-white: #fff;
-$color-gray: gray;
+$color-gray: #b4b4b4;
+$color-dark-gray: #868686;
 $color-black: #000;
+$transparent-black: #060606;
 $color-navy-blue: #02174e;
+$transparent-navy-blue: #02174e00;
+$sub-heading: #94d0ff;
+$gradient-color-one: #2980b9;
+$gradient-color-two: #6dd5fa;
+$color-cyan: cyan;
