--- a/source/css/style.css
+++ b/source/css/style.css
@@ -257,6 +257,41 @@ canvas.particles-js-canvas-el {
   font-size: 18px;
 }
 
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+}
+
+#zio {
+  -webkit-animation: bounce 3s infinite ease-in-out;
+          animation: bounce 3s infinite ease-in-out;
+}
+
 .section {
   position: relative;
   width: 100%;
@@ -275,7 +310,7 @@ canvas.particles-js-canvas-el {
   display: block;
   background-size: cover;
   background-position: center;
-  background-image: url("http://www.ivang-design.com/svg-load/video.jpg");
+  background-image: url("../images/video.jpg");
   -webkit-filter: blur(6px);
           filter: blur(6px);
 }
@@ -291,8 +326,6 @@ canvas.particles-js-canvas-el {
   display: block;
 }
 
-/* Video
-================================================== */
 .wrap-rel {
   position: relative;
   width: 100%;
@@ -313,8 +346,6 @@ canvas.particles-js-canvas-el {
   z-index: 9;
 }
 
-/* #Video wrapper
-================================================== */
 .video-section {
   position: relative;
   width: 100%;
@@ -360,7 +391,7 @@ figure.youtube a:after {
   border-radius: 50%;
   -webkit-box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.15);
-  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+  cursor: url("../images/play.png") 30 30, pointer;
   -webkit-transition: all 300ms linear;
   transition: all 300ms linear;
 }
@@ -395,7 +426,7 @@ figure.youtube a:before {
   margin-left: -3px;
   margin-top: -5px;
   display: block;
-  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+  cursor: url("../images/play.png") 30 30, pointer;
   -webkit-transition: all 300ms linear;
   transition: all 300ms linear;
 }
@@ -416,7 +447,7 @@ figure.youtube a img {
   -webkit-transition: all 300ms linear;
   transition: all 300ms linear;
   border-radius: 10px;
-  cursor: url("http://www.ivang-design.com/svg-load/play.png") 30 30, pointer;
+  cursor: url("../images/play.png") 30 30, pointer;
 }
 
 .counter-style {
@@ -489,7 +520,7 @@ button.close.close-video {
   width: 35px;
   height: 36px;
   border-radius: 26px;
-  color: #1a1dd8;
+  color: #1b17d7;
   padding-bottom: 4px;
   opacity: 1;
 }
@@ -528,14 +559,18 @@ figure.box-img {
 
 .image-box-wrapper {
   padding: 14px;
-  background: -webkit-gradient(linear, left top, right top, from(#2980b9), color-stop(#6dd5fa), to(#ffffff));
-  background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-gradient(linear, left top, right top, from(#2980b9), color-stop(#6dd5fa), to(#fff));
+  background: linear-gradient(to right, #2980b9, #6dd5fa, #fff);
   border-radius: 3px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color: #000;
+}
+
+.box-content-alag {
+  background: -webkit-gradient(linear, right top, left top, from(#2980b9), color-stop(#6dd5fa), to(#fff));
+  background: linear-gradient(to left, #2980b9, #6dd5fa, #fff);
 }
 
 .image-box-description {
@@ -545,7 +580,7 @@ figure.box-img {
 .image-box-content .image-box-title {
   font-weight: bolder;
   font-size: 17px;
-  color: #fff;
+  color: #000;
 }
 
 .latest-news iframe {
@@ -637,9 +672,9 @@ p.view-more a {
 
 .block-button:hover {
   cursor: pointer;
-  background-color: #1874e8;
+  background-color: #168fec;
   border: none;
-  border-color: #1874e8;
+  border-color: #168fec;
   color: #fff !important;
 }
 
@@ -682,7 +717,7 @@ p.view-more a {
   top: -1px;
   left: 50%;
   -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+          transform: translateX(-50%);
   border-top: solid 1px #fff;
   border-bottom: solid 1px #fff;
 }
@@ -784,6 +819,52 @@ p.view-more a {
   margin-right: 5px;
 }
 
+.card-style {
+  display: block;
+  position: relative;
+  height: 220px;
+  width: 221px;
+  background: #fff;
+  padding: 63px 20px 20px 20px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+tag {
+  display: block;
+  padding: 8px 14px;
+  position: absolute;
+  right: -14px;
+  top: 20px;
+  background-color: #1b17d7;
+  color: #6dd5fa;
+  border-top-right-radius: 7px;
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+tag::after {
+  display: block;
+  content: "";
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  background-color: #168fec;
+  right: 0;
+  bottom: -14px;
+  border-bottom-right-radius: 14px;
+}
+
+.warp-style {
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .footer-sec {
   background: url("../images/footer_image.png") no-repeat center center;
   background-size: cover;
@@ -808,7 +889,7 @@ p.view-more a {
 .footer-sec .sub_title span {
   position: relative;
   font-weight: 400;
-  color: #dbe3e3;
+  color: #fff;
   text-transform: uppercase;
   font-size: 18px;
   margin: 0 10px;
@@ -850,7 +931,7 @@ p.view-more a {
   font-size: 22px;
   line-height: 45px;
   border-radius: 50%;
-  border: 1px solid #1fe482;
+  border: 1px solid cyan;
   text-decoration: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -879,56 +960,10 @@ p.view-more a {
 }
 
 .banner_social_link a:hover {
-  color: #1fe482;
+  color: #1b17d7;
 }
 
 .w-text {
   color: cyan;
-}
-
-.card-style {
-  display: block;
-  position: relative;
-  height: 220px;
-  width: 221px;
-  background: #fff;
-  padding: 63px 20px 20px 20px;
-  font-weight: bold;
-  font-size: 14px;
-}
-
-tag {
-  display: block;
-  padding: 8px 14px;
-  position: absolute;
-  right: -14px;
-  top: 20px;
-  background-color: darkblue;
-  color: dodgerblue;
-  border-top-right-radius: 7px;
-  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-tag::after {
-  display: block;
-  content: "";
-  height: 14px;
-  width: 14px;
-  position: absolute;
-  background-color: dodgerblue;
-  right: 0;
-  bottom: -14px;
-  border-bottom-right-radius: 14px;
-}
-
-.warp-style {
-  display: -ms-grid;
-  display: grid;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
