--- a/source/css/style.css
+++ b/source/css/style.css
@@ -197,6 +197,16 @@ marquee {
           transform: translate3d(7%, -50%, 0);
 }
 
+.heder-title {
+  text-align: center;
+  color: #fff;
+  margin-top: 15px;
+}
+
+.heder-title h5 {
+  font-size: 18px;
+}
+
 div#particles-js {
   position: relative;
   width: 100%;
@@ -249,12 +259,13 @@ canvas.particles-js-canvas-el {
 }
 
 .about-content {
-  max-width: 93%;
+  max-width: 98%;
   margin: 0 auto;
 }
 
 .about-content p {
   font-size: 18px;
+  text-align: justify;
 }
 
 @-webkit-keyframes bounce {
