AOS animation added

--- a/source/scss/base/_base.scss
+++ b/source/scss/base/_base.scss
@@ -10,6 +10,7 @@ html {
 
 body {
     background-image: url('#{$cssimgpath}background-style.png');
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
