--- a/source/scss/components/_menu.scss
+++ b/source/scss/components/_menu.scss
@@ -576,3 +576,10 @@ main.main.main--icss {
         margin: 0;
     }
 }
+
+main.main.main--icss {
+    display: block;
+    @include for-phone {
+        display: none;
+    }
+}
