--- a/source/scss/pages/_home.scss
+++ b/source/scss/pages/_home.scss
@@ -62,6 +62,9 @@ div#particles-js {
     position: relative;
     width: 100%;
     height: 100%;
+    @include for-phone {
+        height: auto;
+    }
 }
 
 canvas.particles-js-canvas-el {
@@ -91,9 +94,16 @@ canvas.particles-js-canvas-el {
         letter-spacing: 1px;
         color: $color-two-lignt-blue;
         text-transform: uppercase;
+        @include for-phone {
+            text-align: center;
+            font-size: 25px;
+        }
     }
     p {
         color: $color-gray;
+        @include for-phone {
+            text-align: center;
+        }
     }
 }
 
@@ -102,12 +112,25 @@ canvas.particles-js-canvas-el {
     h3 {
         font-size: 22px;
         color: $sub-heading;
+        @include for-phone {
+            font-size: 20px;
+            margin-top: -11px;
+        }
+    }
+    p {
+        @include for-phone {
+            text-align: left;
+            font-size: 15px;
+        }
     }
 }
 
 .two-type-icon {
     img {
         width: 80px;
+        @include for-phone {
+            width: 72px;
+        }
     }
 }
 
